--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -7,26 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script>
-      $(document).ready(function(){
-          
-          $('#like_{{note.idnote}}').click(function(){
-            //var fav=document.getElementById("like_{{note.idnote}}");
-            $.ajax({
-              url: '/upload/addLike/{{ note.idnote }}/',
-              success: function(data) {
-                if (data==1){
-                  alert("success!");
-                }
-                else {
-                  //$("#like_{{note.idnote}}").addClass("red");
-                  alert("already exist & remove it");
-                }
-              }
-            });
-          });
-        })
-    </script>
+
     <style type="text/css">
        .note:hover{
         top: -5px;
@@ -39,14 +20,23 @@
 
 <div class="notePage ui grid container">
     {% for note in note %}
-
       <div class="four wide column">
         <div class="note ui card" style="cursor:pointer;">
             <div class="content">
-                <img class="ui avatar image" src="https://semantic-ui.com/images/avatar/large/elliot.jpg">
+              <script>
+                var imgName = "{{note.user.first_name}}";
+                if (imgName == ""){
+                  document.write('<img class="ui avatar image" src="https://semantic-ui.com/images/avatar/large/elliot.jpg">');
+                }
+                else{
+                  document.write('<img class="ui avatar image" src="http://127.0.0.1:8000/media/{{note.user.first_name}}">');
+                }
+              </script>
+
                 {{note.user.username}}
+
                 <div class="right floated meta">14h</div>
-            </div> 
+            </div>
             <div class="content">
                 <h3 class="center aligned">{{note.title}}</h3>
 
@@ -77,6 +67,26 @@
                 {% endifequal %}
               </div>
             </div>
+            <script>
+              $(document).ready(function(){
+
+                  $('#like_{{note.idnote}}').click(function(){
+                    //var fav=document.getElementById("like_{{note.idnote}}");
+                    $.ajax({
+                      url: '/upload/addLike/{{ note.idnote }}/',
+                      success: function(data) {
+                        if (data==1){
+                          alert("success!");
+                        }
+                        else {
+                          //$("#like_{{note.idnote}}").addClass("red");
+                          alert("already exist & remove it");
+                        }
+                      }
+                    });
+                  });
+                })
+            </script>
         </div>
       </div>
 
