login outward use bootstrap / comment out url

--- a/login/templates/login/form_template.html
+++ b/login/templates/login/form_template.html
@@ -1,7 +1,8 @@
 {% for field in form %}
-  <div class="in">
+  <div class="form-group">
       <span>{{ field.error }}</span>
       <label>{{ field.label_tag}}</label>
       {{ field }}
+
   </div>
 {% endfor %}
