--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -52,82 +52,7 @@
   <button onclick="location.href='../create/'" type="button">Create New Note</button>
 
 <div class="notePage ui grid container">
-    {% for note in note %}
-      <div class="four wide column">
-        <div class="note ui card" style="cursor:pointer;">
-            <div class="content">
-              <script>
-                var imgName = "{{note.user.first_name}}";
-                if (imgName == ""){
-                  document.write('<img class="ui avatar image" src="https://semantic-ui.com/images/avatar/large/elliot.jpg">');
-                }
-                else{
-                  document.write('<img class="ui avatar image" src="http://127.0.0.1:8000/media/{{note.user.first_name}}">');
-                }
-              </script>
-
-                {{note.user.username}}
-
-                <div class="right floated meta">14h</div>
-            </div>
-            <div class="content">
-                <h3 class="center aligned">{{note.title}}</h3>
-
-                <h5 class="center aligned">{{ note.intro }}</h5>
-            </div>
-            <div class="content">
-              <div class="list">
-                <div class = "item">
-                  {{note.field}}
-                </div>
-                <div clas="item">
-                  {{note.subjects}}</div>
-              </div>
-            </div>
-            <div class="content">
-                {%if note.idnote in fav %}
-                <button class="ui right labeled icon button Mini Blue left floated like" id='{{note.idnote}}'>
-                    <i class="bookmark icon"></i><span class="liketext">已收藏</span>
-                </button>
-                {% else %}
-                <button class="ui right labeled icon button Mini Basic left floated like" id='{{note.idnote}}'>
-                    <i class="bookmark icon"></i><span class="liketext">收藏</span>
-                </button>
-                {% endif %}
-              <!--  <input id="like" type='submit' value="add Like" onclick="style">-->
-              <div class="right floated">
-                {%ifequal note.permission 1  %}
-                  <i class="globe icon"></i>公開
-                {% else %}
-                  <i class="user icon"></i>私人
-                {% endifequal %}
-              </div>
-            </div>
-        <!--    <script>
-              $(document).ready(function(){
-
-                  $('#like_{{note.idnote}}').click(function(){
-                    //var fav=document.getElementById("like_{{note.idnote}}");
-                    $.ajax({
-                      url: '/upload/addLike/{{ note.idnote }}/',
-                      success: function(data) {
-                        if (data==1){
-                          alert("success!");
-                        }
-                        else {
-                          //$("#like_{{note.idnote}}").addClass("red");
-                          alert("already exist & remove it");
-                        }
-                      }
-                    });
-                  });
-                })
-            </script> -->
-        </div>
-      </div>
-
-    {% endfor %}
-
+  {% include 'upload/note_template.html' %}
 </div>
 
 </html>
