delete note event

--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -1,12 +1,17 @@
-{% load staticfiles %}
 <html>
   <head>
-    <link rel="stylesheet" href="{% static 'css/NotePageStyle.css' %}">
     <title>NotePlatForm</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script>
       $(document).ready(function(){
 
@@ -39,6 +44,29 @@
               }
             });
           });
+          // 刪除筆記
+          $('.delete').click(function(){
+            var delid =$(this).attr("id");
+          //  alert(delid)
+            $('.deleteTag').click(function(){
+              var tag = $(this).attr("id");
+              //alert(tag);
+              if(tag==1){
+                $.ajax({
+                  url: '/upload/deleteNote/',
+                  type: "POST",
+                  data: {"id": delid },
+                  dataType: 'json',
+                  success: function(data) {
+                     location.reload();
+                  }
+                })
+              }
+              else{
+                location.reload();
+              }
+            });
+          });
         })
     </script>
     <style type="text/css">
@@ -49,6 +77,10 @@
 
   </head>
   <h2>Note Page</h2>
+  <div class="ui icon input">
+    <input type="text">
+    <i class="search icon"></i>
+  </div>
   <button onclick="location.href='../create/'" type="button">Create New Note</button>
 
 <div class="notePage ui grid container">
