--- a/login/templates/login/login_form.html
+++ b/login/templates/login/login_form.html
@@ -1,24 +1,6 @@
+{% extends 'login/appbase.html' %}
 
-<html>
-  <head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <title>NotePlatForm</title>
-    <script>
-      $(document).ready(function(){
-        $('input').addClass("form-control");
-      })
-    </script>
-  </head>
-  <body>
+{% block content %}
 
     {% if form.non_field_errors %}
         <ul class='form-errors'>
@@ -27,26 +9,26 @@
             {% endfor %}
         </ul>
     {% endif %}
+  <div class="container">
+      <h1>NotePlatForm</h1>
+        <div class="btn-group">
+          <button onclick="location.href='/login/login/'" type="button"  class="btn btn-primary">Login</button>
+          <button onclick="location.href='/login/register/'" type="button" class="btn btn-primary">Register</button>
+        </div>
+        <div class="form-group">
+          <form action='' method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% include 'login/form_template.html' %}
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <ul class="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
 
-<div class="container">
-    <h1>NotePlatForm</h1>
-      <div class="btn-group">
-        <button onclick="location.href='/login/login/'" type="button"  class="btn btn-primary">Login</button>
-        <button onclick="location.href='/login/register/'" type="button" class="btn btn-primary">Register</button>
-      </div>
-      <div class="form-group">
-        <form action='' method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          {% include 'login/form_template.html' %}
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-      <ul class="messages">
-          {% for message in messages %}
-          <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-      </ul>
-  </body>
-</div>
+    </div>
 
-</html>
+{% endblock content %}
+
