--- a/login/templates/login/regist_form.html
+++ b/login/templates/login/regist_form.html
@@ -1,25 +1,7 @@
+
+{% extends 'login/appbase.html' %}
 {% load staticfiles %}
-<html>
-<head>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Popper JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <title>Join us</title>
-  <script>
-    $(document).ready(function(){
-      $('input').addClass("form-control");
-      $('textarea').addClass("form-control");
-    })
-  </script>
-</head>
-<body>
+{% block content %}
   <div class="container">
       <h1>Welcome</h1>
       <div class="btn-group">
@@ -43,5 +25,4 @@
           {% endfor %}
       </ul>
   </div>
-</body>
-</html>
+{% endblock %}
