--- a/person/templates/person/index.html
+++ b/person/templates/person/index.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-  <button onclick="location.href='/upload/create/'" type="button">Create New Note</button>
-  <button onclick="location.href='../upload/'" type="button">uploadPhoto</button>
-  <button onclick="location.href='../Myfavorite/'" type="button">Myfavorite</button>
-  <div>
-    <div class="notePage ui grid container">
+<div class="ui two column grid centered">
+  <div class="three wide column">
+    {%include 'person/sidemenu.html' %}
+  </div>
+  <div class="eleven wide column">
+    <div class="notePage ui grid stackable">
       {% include 'upload/note_template.html' %}
     </div>
   </div>
-
-</html>
+</div>
 {% endblock %}
