--- a/upload/templates/upload/delete_template.html
+++ b/upload/templates/upload/delete_template.html
@@ -1,5 +1,5 @@
 {% if note.user.id == request.user.id and request.path == '/person/index/' %} <!-- 只有自己可以刪除自己的筆記 -->
-<button type="button" class="ui button delete" data-toggle="modal" data-target="#exampleModal" id='{{note.idnote}}'>
+<button type="button" class="ui basic icon button delete"  data-toggle="modal" data-target="#exampleModal" id='{{note.idnote}}'>
   <i class="trash icon"></i>
 </button>
 {% endif %}
