--- a/login/templates/login/form_template.html
+++ b/login/templates/login/form_template.html
@@ -1,8 +1,7 @@
 {% for field in form %}
-  <div class="form-group">
+  <div class="field">
       <span>{{ field.error }}</span>
       <label>{{ field.label_tag}}</label>
       {{ field }}
-
   </div>
 {% endfor %}
