--- a/login/templates/login/login_form.html
+++ b/login/templates/login/login_form.html
@@ -9,25 +9,25 @@
             {% endfor %}
         </ul>
     {% endif %}
-  <div class="container">
-      <h1>NotePlatForm</h1>
-        <div class="btn-group">
-          <button onclick="location.href='/login/login/'" type="button"  class="btn btn-primary">Login</button>
-          <button onclick="location.href='/login/register/'" type="button" class="btn btn-primary">Register</button>
-        </div>
-        <div class="form-group">
-          <form action='' method="post" enctype="multipart/form-data">
+
+   <div class="ui stackable grid">
+      
+        <div class="six wide column centered mycard">
+          <h3 class="ui blue header">Account Login</h3>
+          <form action='' class="ui form" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% include 'login/form_template.html' %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="fluid ui blue button">Submit</button>
           </form>
+          <div>
+            <ul>
+                {% for message in messages %}
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}><h5>{{ message }}</h5></li>
+                {% endfor %}
+            </ul>
+          </div>
         </div>
-        <ul class="messages">
-            {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-
+           
     </div>
 
 {% endblock content %}
