--- a/login/templates/login/regist_form.html
+++ b/login/templates/login/regist_form.html
@@ -2,27 +2,26 @@
 {% extends 'login/appbase.html' %}
 {% load staticfiles %}
 {% block content %}
-  <div class="container">
-      <h1>Welcome</h1>
-      <div class="btn-group">
-        <button onclick="location.href='/login/login/'" type="button" class="btn btn-primary">Login</button>
-        <button onclick="location.href='/login/register/'" type="button" class="btn btn-primary">Register</button>
-      </div>
-      <div class="form-group">
-          <form action='' method="post" enctype="multipart/form-data">
+<div class="ui stackable grid">
+      
+    <div class="six wide column centered mycard">
+        <h3 class="ui blue header">Register</h3>
+          <form action='' method="post" class="ui form" enctype="multipart/form-data">
             {% csrf_token %}
-            <div class="form-group">
+            <div>
               {{ user_form.as_p}}
               {{ profile_form.as_p }}
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <br>
+            <button type="submit" class="fluid ui blue button">Submit</button>
           </form>
-      </div>
-  </div>
-      <ul class="messages">
-          {% for message in messages %}
-          <H4 {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</H4>
-          {% endfor %}
-      </ul>
+          <ul>
+              {% for message in messages %}
+              <H4 {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</H4>
+              {% endfor %}
+          </ul>
+    </div>
+
+
   </div>
 {% endblock %}
