--- a/templates/Note/base.html
+++ b/templates/Note/base.html
@@ -1,24 +1,27 @@
+{% load static %}
 <html>
     <head>
         <title>NotePlatForm</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'Note/main.css' %}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" >
+       <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+        <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
     </head>
 
     <body>
-        <div class="ui stackable menu">
+        <div class="ui menu" style="margin-bottom: 60px;">
             <div class="item">
               <img src="">
             </div>
             <a class="item" href="{% url 'person:index' %}">MyPage</a>
             <a class="item" href = "{% url 'upload:index'  %}">Notes</a> 
             {% if request.user.is_authenticated is False %}
-            <a class="right item" href="/login/login/">Sign-in</a>
-            <a class= "item" href="/login/register/">Register</a>
+            <a class="right item" href="/login/login/"><button class="ui blue basic button">Sign-in</button></a>
+            <a class= "item" href="/login/register/"><button class="ui blue button">Register</button></a>
             {% else %}
             <a class="right item" href="{% url 'login:logout' %}">Logout</a>
             <div class= "item">
@@ -27,7 +30,9 @@
             </div>
             {% endif %}
         </div>
+        <div>
         {% block content %}{% endblock content %}
+        </div>
     </body>
 
 </html>
