Fix Semantic and change modal

--- a/templates/Note/base.html
+++ b/templates/Note/base.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" type="text/css" href="{% static 'Note/main.css' %}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.0/dist/semantic.min.js"></script>
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" >
        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
         <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
@@ -20,8 +19,12 @@
             <a class="item" href="{% url 'person:index' %}">MyPage</a>
             <a class="item" href = "{% url 'upload:index'  %}">Notes</a> 
             {% if request.user.is_authenticated is False %}
-            <a class="right item" href="/login/login/"><button class="ui blue basic button">Sign-in</button></a>
-            <a class= "item" href="/login/register/"><button class="ui blue button">Register</button></a>
+            <a class="right item" href="/login/login/">
+                <button class="ui blue basic button"><i class="user icon"></i>Sign-in</button>
+            </a>
+            <a class= "item" href="/login/register/">
+                <button class="ui blue button"><i class="pencil alternate icon"></i>Register</button>
+            </a>
             {% else %}
             <a class="right item" href="{% url 'login:logout' %}">Logout</a>
             <div class= "item">
@@ -33,6 +36,7 @@
         <div>
         {% block content %}{% endblock content %}
         </div>
+    <script src="{%static 'Note/main.js' %}"></script>
     </body>
 
 </html>
