--- a/upload/templates/upload/delete_template.html
+++ b/upload/templates/upload/delete_template.html
@@ -1,26 +1,18 @@
+
 {% if note.user.id == request.user.id and request.path == '/person/index/' %} <!-- 只有自己可以刪除自己的筆記 -->
-<button type="button" class="ui basic icon button delete"  data-toggle="modal" data-target="#exampleModal" id='{{note.idnote}}'>
+<button type="button" class="ui basic icon button delete" id='{{note.idnote}}'>
   <i class="trash icon"></i>
 </button>
 {% endif %}
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Do you want to delete this note?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary deleteTag" data-dismiss="modal" id="1">Yes</button>
-        <button type="button" class="btn btn-primary deleteTag" id="0">No</button>
-      </div>
+<div class="ui mini modal deletemodal">
+    <div class="header">Delete Note</div>
+    <div class="content">
+      <p>Are you sure to delete this note?</p>
+    </div>
+    <div class="actions">
+      <button class="ui  green button deleteTag" id="1">Yse</button>
+      <button class="ui button deleteTag" id="0">No</button>
     </div>
   </div>
-</div>
 
