Change create note to modal, delete textbook field

--- a/person/templates/person/sidemenu.html
+++ b/person/templates/person/sidemenu.html
@@ -1,11 +1,11 @@
 
 <div class="ui secondary vertical menu">
-  <a class="item">
-      <button class="positive ui button centered big">
+  <div class="item">
+      <button class="positive ui button centered big createnote" onclick=" $('.createmodal').modal('show');">
           <i class="plus square icon"></i>
           CreateNote
       </button>
-  </a>
+    </div>
   <a class="active item" href="../../person/index/">
     MyNote
   </a>
