--- a/upload/templates/upload/create_note.html
+++ b/upload/templates/upload/create_note.html
@@ -1,21 +1,72 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>新增筆記</title>
-</head>
-<body>
-    <form action="." method="POST" name="form1">
-        {% csrf_token %}  <!-- 啟動CSRF防護，保護伺服器避免被攻擊 -->
-        <div>標題：    <input type="text" name="title"></div>
-        <div>領域：    <input type="text" name="field"></div>
-        <div>科目：    <input type="text" name="subjects"></div>
-        <div>教科書：  <input type="text" name="textbook"></div>
-        <div>簡介：    <input type="text" name="introduction"></div>
-        <div>權限      <input type="radio" name="permission" value="1" checked="checked"/>可共編
-                        <input type="radio" name="permission" value="0"/>不可共編 </div>
-        <input type="submit" value="送出資料">
 
-    </form>
-</body>
-</html>
+<div class="ui small modal createmodal">
+    <div class="header">
+        <h3 class="ui blue header">Create Note</h3>
+    </div>
+    <div class="content">
+        <form action="../../upload/create/" method="POST" name="form1" class="ui form">
+            {% csrf_token %}  <!-- 啟動CSRF防護，保護伺服器避免被攻擊 -->
+            <div class="field">
+                <label>Title:</label>
+                <input type="text" name="title">
+            </div>
+            <div class="field">
+                    <label>Intro</label>
+                    <input type="text" name="introduction"> 
+            </div>
+            <div class="field">
+                <label>Field</label>
+                <input type="text" name="field">
+                <!--<div class="ui fluid search dropdown" multiple=""></select>-->
+           </div> 
+            <div class="field">
+                <label>Subjects:</label>
+                <input type="text" name="subjects">
+            </div>
+            <div class="fields">
+                <div class="field">
+                    <label>Permission</label>
+                    
+                    <div class="ui selection dropdown" > 
+                        <input type="hidden" name="permission">
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select Permission</div>
+                        <div class="menu">
+                            <div class="item" data-value="0">
+                                <i class="ban icon"></i>Hide
+                            </div>
+                            <div class="item" data-value="1">
+                                    <i class="user icon"></i>Personal
+                            </div>
+                            <div class="item" data-value="2">
+                                    <i class="globe icon"></i>Public
+                            </div>
+                            <div class="item" data-value="3">
+                                    <i class="users icon"></i>Group
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">
+                    <label>Group</label>
+                    <select class="ui dropdown" name="permission"> 
+                            <option value="0">
+                                <i class="ban icon">i</i>Hide
+                            </option>
+                            <option value="1">
+                                    <i class="user icon" selected></i>Personal
+                            </option>
+                            <option value="2">
+                                    <i class="ban icon"></i>Public
+                            </option>
+                            <option value="3">
+                                    <i class="users icon"></i>Group
+                            </option>
+                    </select>
+                </div>
+            </div>
+            <br>
+            <button type="submit" class="ui blue basic button">Create</button>
+        </form>
+    </div>
+ </div>
