--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -11,7 +11,7 @@
 </form>
 
 
-<div class="notePage ui grid container">
+<div class="notePage ui grid stackable">
   {% include 'upload/note_template.html' %}
 </div>
 
