create group & calendar

--- a/person/templates/person/index.html
+++ b/person/templates/person/index.html
@@ -5,6 +5,7 @@
 <div class="ui two column grid centered">
   <div class="three wide column">
     {%include 'person/sidemenu.html' %}
+    {%include 'person/GroupList.html' %}
   </div>
   <div class="eleven wide column">
     <div class="notePage ui grid stackable">
