--- a/person/templates/person/index.html
+++ b/person/templates/person/index.html
@@ -5,7 +5,6 @@
 <div class="ui two column grid centered">
   <div class="three wide column">
     {%include 'person/sidemenu.html' %}
-    {%include 'person/GroupList.html' %}
   </div>
   <div class="eleven wide column">
     <div class="notePage ui grid stackable">
@@ -14,4 +13,5 @@
   </div>
 </div>
 {% include 'upload/create_note.html' %}
+{% include 'person/create_group.html' %}
 {% endblock %}
