--- a/person/templates/person/sidemenu.html
+++ b/person/templates/person/sidemenu.html
@@ -22,4 +22,20 @@
       <a class="item">Large</a>
     </div>
   </div>
+ 
 </div>  
+<div class="ui secondary vertical menu">
+    <div class="item">
+        <button class="positive ui button centered Big createnote" onclick="$('.groupmodal').modal('show');" >
+        <i class="users icon"></i>
+         AddGroup
+        </button>
+    </div>
+  
+    {% for group in group %}
+        <a class="item" href="/person/Team/{{group.idgroup}}">
+          <i class="hand point right outline icon"></i>
+          {{group.name}}
+        </a>
+    {% endfor %}
+</div>
