--- a/upload/templates/upload/index.html
+++ b/upload/templates/upload/index.html
@@ -3,13 +3,15 @@
 {% block content %}
 
 
+<!--
 <form action="." method="POST">
   <div class="ui action input">
     <input type="text" placeholder="Search..." name='searchNote'>
     <button class="ui button">Search</button>
   </div>
 </form>
-
+-->
+{% include 'upload/tagSearch.html' %}
 
 <div class="notePage ui grid stackable">
   {% include 'upload/note_template.html' %}
