--- a/person/templates/person/sidemenu.html
+++ b/person/templates/person/sidemenu.html
@@ -33,7 +33,7 @@
     </div>
   
     {% for group in group %}
-        <a class="item" href="/person/Team/{{group.idgroup}}">
+        <a class="item" href="/person/Team/Calender/{{group.idgroup}}">
           <i class="hand point right outline icon"></i>
           {{group.name}}
         </a>
