--- a/person/templates/person/Calender.html
+++ b/person/templates/person/Calender.html
@@ -1,5 +1,4 @@
-{% extends 'person/appbase.html' %}
-{% block content %}
+<head>
 <script>
 
   $(document).ready(function() {
@@ -17,7 +16,7 @@
       header: {
         left: 'prev,next today',
         center: 'title',
-        right: 'month,agendaWeek,agendaDay,listWeek'
+        right: 'month,agendaWeek,listWeek'
       },
       //defaultDate: '2018-03-12',
       navLinks: true, // can click day/week names to navigate views
@@ -26,27 +25,19 @@
       events: data
       });
 	});
-
 </script>
 <style>
-
-  body {
-    margin: 40px 10px;
-    padding: 0;
-    font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-    font-size: 14px;
-  }
-
-  #calendar {
-    max-width: 900px;
-    margin: 0 auto;
-  }
-
+.fc-button{
+  border-radius: 0px;
+  background:steelblue;
+  color: white;
+  width: 50px;
+}
 </style>
 </head>
-<body>
-  <div>{{plandetail.plan.name}}</div>
-  <div id='calendar'></div>
 
-</body>
-{% endblock %}
+  <div>{{plandetail.plan.name}}</div>
+  <div id='calendar' style="max-width: 900px; margin: 0 auto;"></div>
+
+
+
