--- a/person/templates/person/TeamIndex.html
+++ b/person/templates/person/TeamIndex.html
@@ -6,24 +6,25 @@
   <div class="three wide column">
     {%include 'person/sidemenu.html' %}
   </div>
-  <div class="eleven wide column">
-    <div class="ui secondary pointing menu">
+  <div class="eleven wide column" style="background-color: white">
+    <div class="ui secondary pointing menu ">
       <a class="item active">
         Calender
       </a>
-      <a class="item">
+      <a class="item ">
         Planner
       </a>
-      <a class="item">
+      <a class="item ">
         Messege
       </a>
-      <div class="right menu">
-        <a class="ui item">
-          Logout
-        </a>
-      </div>
+    </div>
+    <div class="ui basic segment">
+      {%if "/person/Team/Calender/" in request.path %}
+      {%include "person/Calender.html" %}
+      {%endif%}
     </div>
   </div>
+
 </div>
 {% include 'upload/create_note.html' %}
 {% endblock %}
