Basic Drag Drop
- rename main.js
- add cdn
-  change calender

--- a/person/templates/person/Calender.html
+++ b/person/templates/person/Calender.html
@@ -3,11 +3,11 @@
 
   $(document).ready(function() {
 	var data = [
-  {% for plandetail in plandetail %}
+  {% for pd,n in plancard %}
         {
-          title : '{{plandetail.plan.name}}',
-          start : '{{plandetail.start}}',
-          end : '{{plandetail.end}}',
+          title : '{{pd.name}}'+ '_{{n.title}}',
+          start : '{{pd.start}}',
+          end : '{{pd.end}}',
         },
   {% endfor %}
       ];
