--- a/person/templates/person/Planner.html
+++ b/person/templates/person/Planner.html
@@ -1,16 +1,44 @@
 
 <div class="ui grid">
     {% for p in plan %}
-    <div class="three wide column">
-        <div class="ui card">
-            <h4 class="ui header">{{ p.name }}</h4>
-            <ul>
+    <div class="four wide column">
+        <div style="background-color: #D5DBDB;">
+            
+            <h2 class=" ui centered header" style="color: #34495E; background-color: dodgerblue; padding: 5px;">{{ p.name }}</h2>
+           
+            <div class="ui grid container sortable sortlist" style="min-height: 60px;">
                 {% for pd,n in plancard %}
                     {%if p.idplan == pd.plan_id %}
-                        <li>{{ pd.start}} , {{n.title}} </li>
+                     <div class="row" style=" background: white; padding-top:2px;">
+                        <div class="ui card StackedListItem--isDraggable">
+                            <div class="content centered">
+                                 <div class="header">{{n.title}}</div>
+                                 <div class="meta">{{n.intro}}</div>
+                            </div>
+                            <div class="content">
+                                <div class="description"> Start:
+                                    <a class="ui mini gray basic label">
+                                        
+                                        <i class="calendar alternate outline icon"></i>
+                                        {{pd.start}}
+                                    </a> </div>
+                                <div class="description">End:
+                                    <a class="ui tiny gray label">
+                                        <i class="calendar alternate icon"></i>
+                                        {{pd.end}}
+                                </a> </div>
+                            </div>  
+                            <div class="extra content">
+                                <span class="right floated">
+                                        <i class="user icon"></i>
+                                        yyu
+                                </span> 
+                            </div> 
+                        </div>                  
+                    </div>
                     {% endif %}
                 {% endfor %}
-            </ul>
+            </div>
         </div>
     </div>
     {% endfor %}
